refactor: Kapsamlı güvenlik iyileştirmesi ve mimari düzenleme
- [BUGFIX] BUG-01: Başlatma sırası düzeltmesi (enableAllModules timing)
- [BUGFIX] BUG-02: 9 modül merkezi PacketListener dispatcher'a taşındı
- [BUGFIX] BUG-03: Duplicate modüller birleştirildi (CustomPayload/BotProtection)
- [BUGFIX] BUG-04: AbstractModule'e otomatik Listener yaşam döngüsü eklendi
- [BUGFIX] BUG-05: Cleanup task tüm modülleri kapsayacak şekilde genişletildi
- [ARCH] ARCH-01: Modül yaşam döngüsü yönetimi (packet handler tracking)
- [ARCH] ARCH-02: ExploitBlockedEvent API event'leri fire ediliyor
- [ARCH] ARCH-03: Config migration sistemi eklendi
- [PERF] PERF-02: PacketListener bypass permission cache
- [PERF] PERF-03: HeuristicEngine memory leak düzeltmesi
- [PERF] PERF-04: Tüm modüllere isEnabled() guard eklendi
- [FEAT] HEUR-01: HeuristicEngine gerçek aksiyonlar (kick/captcha/log)
- [FEAT] HEUR-02: Suspicion decay mekanizması
- [FEAT] FEAT-01: Velocity modülü Configurate ile tamamlandı
- [FEAT] FEAT-02: Unit test altyapısı (Mockito)
- [FEAT] FEAT-03: bStats metrics entegrasyonu
- [FEAT] FEAT-04: WebPanel güvenlik iyileştirmesi
- [QUAL] QUAL-01..03: Loglama standardizasyonu, magic numbers, annotations

Sürüm değişikliği yok — v1.0.0 korundu.

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -81,6 +81,14 @@
             <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
+        
+        <!-- bStats -->
+        <dependency>
+            <groupId>org.bstats</groupId>
+            <artifactId>bstats-bukkit</artifactId>
+            <version>3.0.2</version>
+            <scope>compile</scope>
+        </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
@@ -138,6 +146,10 @@
                                 <relocation>
                                     <pattern>org.slf4j</pattern>
                                     <shadedPattern>com.atomguard.lib.slf4j</shadedPattern>
+                                </relocation>
+                                <relocation>
+                                    <pattern>org.bstats</pattern>
+                                    <shadedPattern>com.atomguard.lib.bstats</shadedPattern>
                                 </relocation>
                                 <relocation>
                                     <pattern>org.json</pattern>
