--- a/velocity/pom.xml
+++ b/velocity/pom.xml
@@ -33,5 +33,12 @@
             <version>3.3.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
+
+        <!-- Configurate -->
+        <dependency>
+            <groupId>org.spongepowered</groupId>
+            <artifactId>configurate-yaml</artifactId>
+            <version>4.1.2</version>
+        </dependency>
     </dependencies>
 </project>
